[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Menus/PauseScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = SubResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 345.0
margin_top = 77.0
margin_right = 757.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "PAUSE"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
margin_left = 442.0
margin_top = 224.0
margin_right = 660.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 4 )
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 442.0
margin_top = 376.0
margin_right = 660.0
margin_bottom = 411.0
custom_fonts/font = SubResource( 6 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
margin_left = 442.0
margin_top = 300.0
margin_right = 660.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 8 )
text = "Opções"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
